# resumeta-frontend

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
resumeta-frontend/: manage.py
resumeta-frontend/resumeta/: asgi.py  settings.py  urls.py  wsgi.py
