[tool.poetry]
name = "resumeta-frontend"
version = "0.1.0"
description = ""
authors = ["Ben Duncan <benjamin.h.duncan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
